Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 8.0.0-beta1
-
None
-
-
06715441d6 (qt-creator/qt-creator/8.0) 06715441d6 (qt-creator/qt-creator/master) 06715441d6 (qt-creator/tqtc-qt-creator/8.0)
Description
I opened a file foo.txt, triggered "save as", and just pressed "save" without changing the name:
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 QtCore 0x1087743c8 QMetaObject::cast(QObject const*) const + 28 1 libLanguageClient.dylib 0x1111eb7a8 QMetaObject::cast(QObject*) const + 32 (qobjectdefs.h:172) 2 libLanguageClient.dylib 0x1111eb7a8 QMetaObject::cast(QObject*) const + 32 (qobjectdefs.h:172) 3 libLanguageClient.dylib 0x111175384 TextEditor::TextDocument* qobject_cast<TextEditor::TextDocument*>(QObject*) + 32 (qobject.h:474) 4 libLanguageClient.dylib 0x1112abce0 LanguageClient::LanguageClientManager::documentWillSave(Core::IDocument*) + 36 (languageclientmanager.cpp:548) 5 libLanguageClient.dylib 0x1112b84f0 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<Core::IDocument*>, void, void (LanguageClient::LanguageClientManager::*)(Core::IDocument*)>::call(void (LanguageClient::LanguageClientManager::*)(Core::IDocument*), LanguageClient::LanguageClientManager*, void**) + 140 (qobjectdefs_impl.h:171) 6 libLanguageClient.dylib 0x1112b842c void QtPrivate::FunctionPointer<void (LanguageClient::LanguageClientManager::*)(Core::IDocument*)>::call<QtPrivate::List<Core::IDocument*>, void>(void (LanguageClient::LanguageClientManager::*)(Core::IDocument*), LanguageClient::LanguageClientManager*, void**) + 80 (qobjectdefs_impl.h:208) 7 libLanguageClient.dylib 0x1112b8338 QtPrivate::QSlotObject<void (LanguageClient::LanguageClientManager::*)(Core::IDocument*), QtPrivate::List<Core::IDocument*>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 148 (qobjectdefs_impl.h:419) 8 QtCore 0x1087b18f4 0x108700000 + 727284 9 libCore.dylib 0x10e418e54 Core::EditorManager::aboutToSave(Core::IDocument*) + 96 (moc_editormanager.cpp:619) 10 libCore.dylib 0x10e5f981c Core::Internal::EditorManagerPrivate::saveDocumentAs(Core::IDocument*) + 348 (editormanager.cpp:2543) 11 libCore.dylib 0x10e5ec3ac Core::EditorManager::saveDocumentAs() + 16 (editormanager.cpp:3032) 12 libCore.dylib 0x10e56a5ac QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (*)()>::call(void (*&)(), void**) + 32 (qobjectdefs_impl.h:163) 13 libCore.dylib 0x10e56a554 void QtPrivate::FunctionPointer<void (*)()>::call<QtPrivate::List<>, void>(void (*)(), void*, void**) + 40 (qobjectdefs_impl.h:232) 14 libCore.dylib 0x10e56a4f0 QtPrivate::QStaticSlotObject<void (*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 128 (qobject_impl.h:90) 15 QtCore 0x1087b18f4 0x108700000 + 727284 16 QtGui 0x1057b92d8 QAction::triggered(bool) + 60 17 libUtils.7.83.0.dylib 0x106b71830 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, void (QAction::*)(bool)>::call(void (QAction::*)(bool), QAction*, void**) + 144 (qobjectdefs_impl.h:171) 18 libUtils.7.83.0.dylib 0x106b71768 void QtPrivate::FunctionPointer<void (QAction::*)(bool)>::call<QtPrivate::List<bool>, void>(void (QAction::*)(bool), QAction*, void**) + 80 (qobjectdefs_impl.h:208) 19 libUtils.7.83.0.dylib 0x106b71674 QtPrivate::QSlotObject<void (QAction::*)(bool), QtPrivate::List<bool>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 148 (qobjectdefs_impl.h:419) 20 QtCore 0x1087b18f4 0x108700000 + 727284 21 QtGui 0x1057b9160 QAction::activate(QAction::ActionEvent) + 368 22 QtCore 0x1087aa278 QObject::event(QEvent*) + 584 23 QtWidgets 0x106025330 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 272 24 QtWidgets 0x106026398 QApplication::notify(QObject*, QEvent*) + 512 25 QtCore 0x10876886c QCoreApplication::notifyInternal2(QObject*, QEvent*) + 208 26 QtCore 0x108769af0 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 828 27 libqcocoa.dylib 0x1065d3ea4 0x1065bc000 + 97956 28 libqcocoa.dylib 0x1065d4534 0x1065bc000 + 99636 29 CoreFoundation 0x1b06e29a0 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 30 CoreFoundation 0x1b06e28ec __CFRunLoopDoSource0 + 208 31 CoreFoundation 0x1b06e25ec __CFRunLoopDoSources0 + 268 32 CoreFoundation 0x1b06e0f6c __CFRunLoopRun + 828 33 CoreFoundation 0x1b06e0490 CFRunLoopRunSpecific + 600 34 HIToolbox 0x1b9300dd8 RunCurrentEventLoopInMode + 292 35 HIToolbox 0x1b9300b54 ReceiveNextEventCommon + 564 36 HIToolbox 0x1b9300908 _BlockUntilNextEventMatchingListInModeWithFilter + 72 37 AppKit 0x1b323fb2c _DPSNextEvent + 860 38 AppKit 0x1b323e424 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 1328 39 AppKit 0x1b32305f0 -[NSApplication run] + 596 40 libqcocoa.dylib 0x1065d341c 0x1065bc000 + 95260 41 QtCore 0x108771f28 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 544 42 QtCore 0x108768f48 QCoreApplication::exec() + 128 43 Qt Creator 0x104dc2944 main + 11136 (main.cpp:790) 44 dyld 0x104e51088 start + 516
Attachments
For Gerrit Dashboard: QTCREATORBUG-27741 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
418758,2 | Fix "save as" with same file path, involving symbolic links | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |